# boost-cmake-learn

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/base/: base.cpp  base.h  myvector.cpp  myvector.h  teacher.h
src/ipc/: target_func.cpp  target_func.h
src/mq/: consumer.cpp  consumer.h  producer.cpp  producer.h
src/protobuf/: addressbook.cpp  addressbook.h  book1-c++
src/protobuf/proto/: addressbook.pb.cc  addressbook.pb.h
src/sm/: share_memory.cpp  share_memory.h
src/thread/: thread_ops.cpp  thread_ops.h
